--- a/index.html
+++ b/index.html
@@ -1,141 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/scale.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/toastr.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://unpkg.com/tippy.js@5/animations/scale.css" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div class="header">
-    <div class="infoIndicator">
-      <p class="text-bold">Reportar accidente</p>
-      <p id="indicator-number"></p>
-    </div>
-  </div>
-
-  <!-- <div class="indicator">
-    <div class="chip">
-     
-    </div>
-  </div> -->
-
-  <div class="container">
-    <div class="view1" style="display: block;">
-      <div class="section1">
-        <p>Numero de póliza*</p>
-        <input id="numberP" autofocus type="text" />
-      </div>
-
-      <div class="section2">
-        <p>Nombre del asegurado*</p>
-        <input placeholder="Ejemplo: Panchimalco" id="nameUser" type="text" />
-      </div>
-
-      <div class="section3">
-        <p>Correo electronico*</p>
-        <input id="email" type="email" placeholder="Ej: juanlopez@hotmail.com" />
-      </div>
-
-      <div class="section4">
-        <p>Proveedor hospitalario*</p>
-        <input id="provider" type="text" placeholder="Ej: Hospital Angeles del pedregal" />
-      </div>
-
-      <div class="section5">
-        <p>*Campos obligatorios</p>
-      </div>
-
-      <div class="buttons">
-        <button class="btn-secondary">Cancelar</button>
-        <button class="btn-primary next-1">Siguiente</button>
+  <body>
+    <div class="header">
+      <div class="infoIndicator">
+        <p class="text-bold">Reportar accidente</p>
+        <p id="indicator-number"></p>
       </div>
     </div>
 
-    <div class="view2" style="display: none;">
-      <div class="section1">
-        <p>Describe el accidente o motivo de atencion medica*</p>
-        <textarea placeholder="Ej: Hospital Angeles del pedregal" name="" id="description" cols="30"
-          rows="5"></textarea>
-      </div>
+    <div class="container">
+      <div class="view1" style="display: block;">
+        <div class="section1">
+          <p>Número de póliza*</p>
+          <input id="numberP" autofocus type="text" />
+        </div>
 
-      <div class="section2">
-        <p>¿Conoces tu diagnostico?*</p>
-        <div class="containerButtons">
-          <button class="btn-yes">Si</button>
-          <button class="btn-no">No</button>
+        <div class="section2">
+          <p>Nombre del asegurado*</p>
+          <input placeholder="Ejemplo: Panchimalco" id="nameUser" type="text" />
+        </div>
+
+        <div class="section3">
+          <p>Correo electrónico*</p>
+          <input
+            id="email"
+            type="email"
+            placeholder="Ej: juanlopez@hotmail.com"
+          />
+        </div>
+
+        <div class="section4">
+          <p>Proveedor hospitalario*</p>
+          <input
+            id="provider"
+            type="text"
+            placeholder="Ej: Hospital Ángeles del pedregal"
+          />
+        </div>
+
+        <div class="section5">
+          <p class="text-danger">*Campos obligatorios</p>
+        </div>
+
+        <div class="buttons">
+          <button class="btn-secondary btn-cancel">Cancelar</button>
+          <button class="btn-primary next-1">Siguiente</button>
         </div>
       </div>
 
-      <div class="section3">
-       <div class="dataMoreInfo">
-        <span>Ingresa tu diagnostico*</span>
-        <img id="moreInfo" src="question.svg" alt="">
-       </div>
-        <input placeholder="Ej: Fractura de tibia" type="text" name="" id="diagnosis" />
-      </div>
+      <div class="view2" style="display: none;">
+        <div class="section1">
+          <p>Describe el accidente o motivo de atención médica*</p>
+          <textarea
+            placeholder="Ej: Hospital Ángeles del pedregal"
+            name=""
+            id="description"
+            cols="30"
+            rows="5"
+          ></textarea>
+        </div>
 
-      <div class="section4">
-        <p>*Campos obligatorios</p>
-      </div>
+        <div class="section2">
+          <p>¿Conoces tu diagnóstico?*</p>
+          <div class="containerButtons">
+            <button class="btn-yes">Si</button>
+            <button class="btn-no">No</button>
+          </div>
+        </div>
 
-      <div class="buttons">
-        <button class="btn-secondary btn-before">Anterior</button>
-        <button class="btn-primary btn-send">Enviar</button>
+        <div class="section3 sectionDiagnosis">
+          <div class="dataMoreInfo">
+            <span>Ingresa tu diagnóstico*</span>
+            <img id="moreInfo" src="./assets/question.svg" alt="" />
+          </div>
+          <input
+            placeholder="Ej: Fractura de tibia"
+            type="text"
+            name=""
+            id="diagnosis"
+          />
+        </div>
+
+        <div class="section4">
+          <p class="text-danger">*Campos obligatorios</p>
+        </div>
+
+        <div class="buttons">
+          <button class="btn-secondary btn-before">Anterior</button>
+          <button class="btn-primary btn-send">Enviar</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
 
-  <script src="https://unpkg.com/@popperjs/core@2"></script>
-  <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/tippy-bundle.umd.min.js"></script>
 
-  <script>
-    $(document).ready(function () {
-      $("#indicator-number").text("1/2");
+    <script src="./js/toastr.min.js"></script>
 
-      $(".next-1").on("click", function () {
-        console.log("next slide");
+    <script>
+      $(document).ready(function () {
+        let flagShow = false;
 
-        $(".header").css("height", "10vh");
+        toastr.options = {
+          closeButton: true,
+          debug: false,
+          newestOnTop: false,
+          progressBar: false,
+          positionClass: "toast-top-full-width",
+          preventDuplicates: true,
+          onclick: null,
+          showDuration: "300",
+          hideDuration: "1000",
+          timeOut: "5000",
+          extendedTimeOut: "1000",
+          showEasing: "swing",
+          hideEasing: "linear",
+          showMethod: "fadeIn",
+          hideMethod: "fadeOut",
+        };
 
-        $(".view1").fadeOut("fast");
-        $(".view2").fadeIn("slow");
+        $(".sectionDiagnosis").css("display", "none");
 
-        $("#indicator-number").text("2/2");
-      });
+        $("#numberP").on("blur", function (e) {
+          if ($("#numberP").val() === "") {
+            $("#numberP").addClass("field-empty ");
+          } else {
+            $("#numberP").removeClass("field-empty ");
+          }
+        });
 
-      $(".btn-before").on("click", function () {
-        $(".view2").fadeOut("fast");
-        $(".view1").fadeIn("slow");
+        $("#nameUser").on("blur", function (e) {
+          if ($("#nameUser").val() === "") {
+            $("#nameUser").addClass("field-empty ");
+          } else {
+            $("#nameUser").removeClass("field-empty ");
+          }
+        });
+
+        $("#provider").on("blur", function (e) {
+          if ($("#provider").val() === "") {
+            $("#provider").addClass("field-empty ");
+          } else {
+            $("#provider").removeClass("field-empty ");
+          }
+        });
+
+        $("#email").on("blur", function (e) {
+          if ($("#email").val() === "") {
+            $("#email").addClass("field-empty ");
+          } else {
+            $("#email").removeClass("field-empty ");
+          }
+        });
+
+        $("#description").on("blur", function (e) {
+          if ($("#description").val() === "") {
+            $("#description").addClass("field-empty ");
+          } else {
+            $("#description").removeClass("field-empty ");
+          }
+        });
 
         $("#indicator-number").text("1/2");
-      });
-      $(".next-2").on("click", function () {
-        $(".view2").fadeOut("fast");
-      });
 
-      $(".btn-send").on("click", function () {
-        console.log("send form");
-      });
+        $(".next-1").on("click", function () {
+          // nameUser email provider
 
+          const poliza = $("#numberP").val();
+          const nameUser = $("#nameUser").val();
+          const email = $("#email").val();
+          const provider = $("#provider").val();
 
-      tippy('#moreInfo', {
-  content: `Es el termino medico utilizado para describir tu padecimiento, puedes encontrarlo en tu receta
-  o formato de reclamacion.
+          if (
+            poliza === "" ||
+            nameUser === "" ||
+            email === "" ||
+            provider === ""
+          ) {
+            $(".text-danger").css("color", "red");
+            toastr.warning("llene los campos obligatorios!");
+          } else {
+            $(".view1").fadeOut("fast");
+            $(".view2").fadeIn("slow");
+            $(".text-danger").css("color", "black");
+
+            $("#indicator-number").text("2/2");
+            console.log("next slide");
+          }
+
+          // $(".header").css("height", "10vh");
+        });
+
+        $(".btn-before").on("click", function () {
+          $(".view2").fadeOut("fast");
+          $(".view1").fadeIn("slow");
+
+          $("#indicator-number").text("1/2");
+        });
+
+        $(".btn-yes").on("click", function () {
+          $(".sectionDiagnosis").show("slow");
+          flagShow = true;
+
+          $("#diagnosis").on("blur", function (e) {
+            if ($("#diagnosis").val() === "") {
+              $("#diagnosis").addClass("field-empty ");
+            } else {
+              $("#diagnosis").removeClass("field-empty ");
+            }
+          });
+        });
+
+        $(".btn-no").on("click", function () {
+          $(".sectionDiagnosis").hide("slow");
+          flagShow = false;
+        });
+
+        $(".btn-send").on("click", function () {
+          const description = $("#description").val();
+          const diagnosis = $("#diagnosis").val();
+
+          if (description !== "" && flagShow === false) {
+            console.log("send data");
+          } else if (
+            description !== "" &&
+            flagShow === true &&
+            diagnosis !== ""
+          ) {
+            console.log("send data");
+          } else {
+            toastr.warning("llene los campos obligatorios!");
+          }
+        });
+
+        $(".btn-cancel").on("click", function () {
+          console.log("button cancel");
+        });
+
+        tippy("#moreInfo", {
+          content: `Es el término médico utilizado para describir tu padecimiento, puedes encontrarlo en tu receta
+  o formato de reclamación.
   Suele estar indicado con las letras DX.
-  Ejemplo> DX: Fractura de Tibia
+  Ejemplo; DX: Fractura de Tibia
   `,
-});
-
-    });
-  </script>
-</body>
-
+        });
+      });
+    </script>
+  </body>
 </html>
